upd / MAJOR UPDATE FOR OUR LITTLE BEAUTIFUL CONSTRAINT SERVICE! NOW... WE CAN... USE CATEGORY ID TO SPECIFY FUCKING JEBANY GOVNO NAMED CATEGORY IN OUR CONSTRAINT. UNNNNNNNNNNBELIEVEALAWEJHBSGJDHFSDBFAS